--- a/package.json
+++ b/package.json
@@ -25,15 +25,15 @@
   },
   "scripts": {
     "css-deploy": "npm-run-all css-build css-postcss",
-    "css-build": "node-sass _sass/main.scss pub/css/main.css",
-    "css-postcss": "postcss --use autoprefixer --output pub/css/main.css pub/css/main.css",
+    "css-build": "node-sass _sass/main.scss docs/css/main.css",
+    "css-postcss": "postcss --use autoprefixer --output docs/css/main.css docs/css/main.css",
     "css-watch": "npm run css-build -- --watch",
     "deploy": "npm-run-all --parallel css-deploy js-build index-build",
-    "js-build": "babel _javascript --out-dir pub/lib",
+    "js-build": "babel _javascript --out-dir docs/lib",
     "js-watch": "npm run js-build -- --watch",
-    "index-watch": "_shell/markdown-inline-tag -w views/index.html pub/index.html",
-    "index-build": "_shell/markdown-inline-tag views/index.html pub/index.html",
-    "preview": "http-server ./pub",
+    "index-watch": "_shell/markdown-inline-tag -w views/index.html docs/index.html",
+    "index-build": "_shell/markdown-inline-tag views/index.html docs/index.html",
+    "preview": "http-server ./docs",
     "start": "npm-run-all index-build css-build --parallel css-watch js-watch index-watch preview"
   }
 }
